--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,19 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Wait for SSH to be available
+        run: |
+          for i in {1..30}; do
+            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=5 -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") ubuntu@${{ steps.ip.outputs.instance_ip }} echo "SSH Ready"; then
+              echo "SSH is available"
+              exit 0
+            fi
+            echo "Waiting for SSH... (attempt $i/30)"
+            sleep 10
+          done
+          echo "SSH did not become available in time"
+          exit 1
+
       - name: Run Ansible
         uses: dawidd6/action-ansible-playbook@v2
         with:
