--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,45 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Import existing resources if present
+        run: |
+          set +e  # Don't fail on import errors
+
+          # Import security group if exists
+          SG_ID=$(aws ec2 describe-security-groups \
+            --filters "Name=group-name,Values=dev-app-sg" \
+            --query 'SecurityGroups[0].GroupId' \
+            --output text 2>/dev/null)
+
+          if [ "$SG_ID" != "" ] && [ "$SG_ID" != "None" ]; then
+            echo "Importing existing security group: $SG_ID"
+            terraform import -input=false aws_security_group.app_sg "$SG_ID" || true
+          fi
+
+          # Import IAM role if exists
+          if aws iam get-role --role-name dev-ec2-role >/dev/null 2>&1; then
+            echo "Importing existing IAM resources"
+            terraform import -input=false aws_iam_role.ec2_role dev-ec2-role || true
+            terraform import -input=false aws_iam_role_policy_attachment.ssm_policy "dev-ec2-role/arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore" || true
+            terraform import -input=false aws_iam_instance_profile.ec2_profile dev-ec2-profile || true
+          fi
+
+          # Import instance if exists
+          INSTANCE_ID=$(aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=dev-app-server" "Name=instance-state-name,Values=running,stopped,pending" \
+            --query 'Reservations[0].Instances[0].InstanceId' \
+            --output text 2>/dev/null)
+
+          if [ "$INSTANCE_ID" != "" ] && [ "$INSTANCE_ID" != "None" ]; then
+            echo "Importing existing instance: $INSTANCE_ID"
+            terraform import -input=false aws_instance.app_server "$INSTANCE_ID" || true
+          fi
+
+          set -e
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
         env:
